src/sass/style.sass
@import fonts
  
body 
  font-family: SfProDisplayRegular, sans-serif!important

.sf-pro-medium
  font-family: SfProDisplayMedium, sans-serif!important

.footer
  background: #141414
  &-logo
    color: #FF4343
    font-style: normal
    font-weight: 400
    font-size: 22px
    line-height: 26px


  
.banner
  position: relative
  &-content
    width: 100%
    background: #141414
    @media (max-width: 992px) 
      height: 415px
  
  &-info
    flex: 1
    margin: 200px 0
    @media (max-width: 992px) 
      margin: 50px 0

  &-title
    font-style: normal
    font-weight: 400
    font-size: 64px
    line-height: 76px
    &-red
      color: #FF4343
  &-text
    font-style: normal
    font-weight: 400
    font-size: 16px
    line-height: 19px
    color: #A2A2A2
    max-width: 405px

  &-img
    object-fit: cover
    height: 100%
    &-wrap
      flex: 1

      @media (max-width: 991px)
        display: none

  &-btn-icon
    border-radius: 0 !important
  &-btn
    background: #FF4343
  
  &-controllers

    &-btn
      background: none
      outline: none

    &-text
      font-style: normal
      font-weight: 400
      font-size: 16px
      line-height: 19px
      color: #FFFFFF


.bankBills 
  &-image
    width: 100%
    object-fit: cover

    &-wrap
      flex: 1
    
  &-content
    flex: 1

  &-item-text
    font-style: normal
    font-weight: 400
    font-size: 16px
    line-height: 19px
    max-width: 400px

    @media (max-width: 500px) 
      max-width: 200px

.partners
  &-slide
    max-width: 160px
  &-img
    width: 100%
    height: 100%
    filter: grayscale(100%)
    &-big
      max-width: 60px
      max-height: 80px
    &-wrap
      height: 50px
      width: 110px

.contacts
  font-weight: 400
  font-size: 34px
  color: #141414
  &-borders
    border-top: 1px solid #F8F8F8
    border-bottom: 1px solid #F8F8F8
  &-map
    // filter: grayscale(90%)

  &-item
    max-width: 310px
    width: 100%
    min-height: 146px
    border-right: 1px solid #F8F8F8
    &:last-child
      border-right: none
    &-title
      font-weight: 500
      font-size: 18px

    &-desc
      font-size: 16px
      line-height: 19px
      color: #141414
      max-width: 215px


.header__logo-span 
  color: #FF4343

.header__nav-item
  text-decoration: none
  color: #141414
  cursor: pointer
  &._is-active 
    color: #FF4343
    border-bottom: 1px solid #FF4343

.ourservices
  &__head
    max-width: 350px
    &-text 
      color: #A1A1A1
      &.overflow
        text-overflow: ellipsis
        -webkit-line-clamp: 3
        display: -webkit-box
        -webkit-box-orient: vertical
        overflow: hidden
  &__card
    &:hover .ourservices__arrow
      fill: #FF4343
    &:hover .ourservices__card-title 
      color: #FF4343
    &-avatar
      width: 140px
      height: 140px
    &-title
      transition: color 150ms ease-in
      color: #141414
    &-text
      max-width: 350px
  &__arrow
    fill: #141414
    transition: fill 150ms ease-in
  &__all-services
    min-height: 300px
    @media (min-width: 576px)
      min-height: auto


.about-section
  &__bg 
    background-color: #141414
  &__info
    max-width: 610px
  &__counter
    min-width: 30px
    min-height: 30px
    background-color: #FF4343
  &__image
    padding-bottom: 54.39%
    img
      object-fit: cover

.strategy
  &__title
    color: #FF4343
  &__list
    color: #a1a1a1
  &__info
    max-width: 600px

.feedback
  &__image
    padding: 0px 0px 38.6% 0px
    img
      object-fit: cover
  &__title
    color: #FF4343
  &__form
    textarea 
      resize: none
      height: 130px
    button 
      background: #FF4343

.requisites
  background: #141414
  &-container
    max-width: 792px
    margin: 0 auto
    padding: 1rem
  &-table
    width: 760px !important

    &-wrap
      overflow-x: auto

    th 
      color: #A2A2A2
  
.financing

  &-list
    list-style: none
    padding: 0

    @media (max-width: 1200px)
      flex-wrap: wrap 

    &-item
      width: 400px
      height: 160px
      background: #FBFBFB
      padding: 20px

        

      &-wrap
        max-width: 290px
        margin: 0 auto
        
.project
  &__title
    font-size: 32px
    @media (min-width: 576px) 
      font-size: 48px
    @media (min-width: 767px)
      font-size: 64px
  &__image
    width: 610px
    padding: 0px 0px 55.3% 0px
    @media (min-width: 992px) and (max-width: 1200px)
      padding: 0 0 90% 0
    @media (max-width: 992px)
      width: 100%

